@@ -1,4 +1,4 @@
-package gcc8544;
+package gcc.8544;
 
 public class StyledText {
     LineCache lineCache;
